--- a/css/slyles.css
+++ b/css/slyles.css
@@ -278,6 +278,7 @@ a.tel:focus {
   transform: translate(-50%, -50%);
   padding: 40px;
   width: 528px;
+  height: 581px;
   max-height: 100vh;
   overflow-y: auto;
   background-color: var(--background-main-color);
@@ -332,7 +333,7 @@ a.tel:focus {
   margin: 0;
 }
 
-.request-title {
+.request__text {
   margin-bottom: 30px;
   font-weight: 700;
   font-size: 20px;
@@ -459,6 +460,7 @@ textarea {
   border-radius: 2px;
   transition: background-color 250ms var(--timing-function),
     border 250ms var(--timing-function);
+  cursor: pointer;
 }
 
 .visually-hidden {
@@ -806,7 +808,7 @@ textarea {
   margin-left: 93px;
 }
 
-.news-title {
+.news__text {
   display: flex;
   align-items: baseline;
   margin-bottom: 20px;
@@ -1001,7 +1003,7 @@ a.connection {
   width: 100%;
   height: 100%;
   padding: 63px 24px;
-  transform: translateY(100%);
+  transform: translateY(calc(100% + 1px));
   background-color: rgba(33, 150, 243, 0.9);
   transition: transform 250ms var(--timing-function);
 }
